--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,5 @@
-audioread==2.1.2
-cycler==0.10.0
-decorator==4.0.9
-joblib==0.9.4
-matplotlib==1.5.1
-mido==1.1.14
-numpy==1.10.4
-PyAudio==0.2.9
+future==0.17.1
+mido==1.2.9
+numpy==1.15.4
+PyAudio==0.2.11
 pyFluidSynth==1.2.4
-pyparsing==2.1.0
-python-dateutil==2.5.0
-pytz==2015.7
-scikit-learn==0.17.1
-scipy==0.17.0
-six==1.10.0
